# LuaHook-NG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  LuaHook-NG.sln  README.md  appveyor.yml
ClientApps/DeveloperTools/: AutoJoinThread.h  CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.h  CyclicFuture.h  DeveloperTools.cpp  DeveloperTools.h  PipePair.cpp  PipePair.h
ClientApps/TestLuaHookNG/: CMakeLists.txt  CatchMain.cpp  CatchMain.h  TestInterception.cpp  TestLuaAPI.cpp  dllmain.cpp
DeveloperTools/: AutoJoinThread.h  ConsoleManager.cpp  ConsoleManager.h  CyclicFuture.h  DeveloperTools.cpp  DeveloperTools.h  DeveloperTools.vcxproj  DeveloperTools.vcxproj.filters  PipePair.h  stdafx.cpp  stdafx.h
LuaHook-NG/: CMakeLists.txt  LuaHook-NG.vcxproj  LuaHook-NG.vcxproj.filters
LuaHook-NG/cmake/: win32.cmake
LuaHook-NG/include/: FunctionHooker.h  LuaGame.h  LuaGameImpl.h  LuaHookNG.h  LuaInterface.h  PaydayLua.h  ProcessSearcher.h  Utility.h  stdafx.h
LuaHook-NG/include/PaydayLua/: InGameWin32.h
LuaHook-NG/include/detail/: LinkHandler.h  LuaAPIImpl.h  LuaAppSelector.h  RegistrationManager.h  Utility.h
LuaHook-NG/include/detail/interface/: ICallable.h  IHookSet.h  IHookable.h  IHooked.h  IInterceptor.h  ILibraryLoader.h  ILinkHandler.h  ILuaAppHandler.h  IRuntimeCodeHook.h
LuaHook-NG/include/detail/windows/: DetoursCodeHook.h  WindowsLibraryLoader.h
LuaHook-NG/include/detail/windows/x86/: AsmUtils.h
LuaHook-NG/include/detail/windows/x86/PAYDAY1/: Payday1Handler.h
LuaHook-NG/include/detail/windows/x86/PAYDAY2/: LuaReimplementation.h  OnCloseStateHandler.h  OnNewStateHandler.h  OnTickHandler.h  Payday2Handler.h
LuaHook-NG/include/public/: LinkSpec.h  LuaAPI.h  LuaAppLink.h  LuaHookNG.h
LuaHook-NG/include/public/interface/: ICloseStateClient.h  INewStateClient.h  IOnRequireClient.h  IOnTickClient.h
LuaHook-NG/src/: ConsoleManager.cpp  FunctionHooker.cpp  LuaAPI.cpp  LuaAppLink.cpp  LuaAppSelector.cpp  LuaGame.cpp  LuaGameImpl.cpp  LuaHookNG.cpp  LuaInterface.cpp  PaydayLua.cpp  PipePair.cpp  TempDetour.h  Utility.cpp  stdafx.cpp
LuaHook-NG/src/Asm/: UtilityAsm.asm
LuaHook-NG/src/PaydayLua/: InGameWin32.cpp  InGameWin32Asm.asm
LuaHook-NG/src/windows/: DetoursCodeHook.cpp  WindowsLibraryLoader.cpp  dllmain.cpp
LuaHook-NG/src/windows/x86/: AsmUtils.asm
LuaHook-NG/src/windows/x86/PAYDAY1/: Payday1Handler.cpp
LuaHook-NG/src/windows/x86/PAYDAY2/: LuaReimplementation.cpp  OnCloseStateHandler.cpp  OnNewStateHandler.cpp  OnTickHandler.cpp  Payday2.asm  Payday2Handler.cpp  README.md
(+51 files in other folders)
